[package]
name = "rustretro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.25.0"
libloading = "0.7.0"
libc = "0.2"
libretro-sys = "0.1.1"
clap = { version = "4.4.2", features = ["derive"] }
rand = "0.8.5"
shellexpand = "2.1"
rodio = "0.17.3"
gilrs = "0.10.3"
once_cell = "1.18.0"
enum-map = "2.7.2"
